spring upgrade from 3.4.2 to 4.1.0 and java update from 17 to 25